# ffmpeg_music_player

./: .clang-format  .gitignore  .qmake.stash  ARCHITECTURE_DESIGN.md  AUDIO_ARCHITECTURE.md  AUDIO_SESSION_INTERACTION.md  AudioBuffer.cpp  AudioBuffer.h  AudioDecoder.cpp  AudioDecoder.h  AudioPlayer.cpp  AudioPlayer.h  AudioService.cpp  AudioService.h  AudioSession.cpp  AudioSession.h  BUILD_AND_RUN.md  BUILD_ISSUE_FIX.md  BUILD_QT5_ONLY.md  CMAKE_BUILD_GUIDE.md  CMAKE_MIGRATION.md  CMAKE_PROJECT_STRUCTURE.md  CMAKE_SUMMARY.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  DOWNLOAD_ARCHITECTURE.md  FAVORITE_HISTORY_IMPLEMENTATION.md  HOW_TO_KILL_PROCESS.md  HTTP_OPTIMIZATION_PLAN.md  IMMEDIATE_ACTION.md  IMPLEMENTATION_SUMMARY.md  LOCAL_MUSIC_CACHE_IMPLEMENTATION.md  LYRIC_QML_MIGRATION.md  MVVM_ARCHITECTURE.md  MVVM_CORRECT_IMPLEMENTATION.md  MVVM_IMPLEMENTATION_SUMMARY.md  Makefile  MediaService.cpp  MediaSession.cpp  (+219 more)
.ai/: decisions.md  ownership.yaml  tasks.yaml
.ai/handoffs/: 20260417-1346-codex-collab-bootstrap.md  20260417-2117-codex-online-comments-v1.md  20260417-2117-codex-settings-redesign.md  20260417-2129-codex-comment-panel-black-screen-fix.md  20260417-2138-codex-settings-main-content.md  20260417-2211-codex-comment-dual-host.md  20260417-2214-codex-settings-html-redesign.md  20260417-2315-codex-settings-overlap-fix.md  20260417-2324-codex-playback-right-overlay-host.md  20260417-2328-codex-settings-overlap-row-fix.md  20260418-0007-codex-playback-queue-redesign.md  20260418-0026-codex-playlist-queue-click-crash-fix.md  20260418-0040-codex-playlist-current-track-display-fix.md  20260418-0420-codex-pr-split-submit.md  20260418-1016-codex-pr-split-submit-closeout.md  20260418-1041-codex-remove-ai-stack.md  20260418-1115-codex-all-current-work-one-pr.md  20260418-1131-codex-pr19-governance-review-cleanup.md
.githooks/: commit-msg  pre-commit  pre-push
.github/: copilot-instructions.md
.github/workflows/: feishu-pr-review-notify.yml
GoTest/: Makefile  config.yaml  deploy.sh  go.mod  go.sum  library.cpp  library.h  main.go  performance_test.py  server.log.1  start_server.sh  stop_server.sh  服务器程序
agent/: AI控制Qt音乐软件总体方案.md  Claude Code方法论对当前音乐Agent的架构借鉴清单.md  GitHub评审飞书中转服务.md  Qt Host API初版清单与JSON协议草案.md  Qt客户端Markdown渲染方案.md  Qt端会话与消息存储对接.md  Qt端对接建议.md  Qt端最终联调协议稿.md  Qt端流式输出对接.md  Qt端类图与信号槽设计.md  README.md  pyproject.toml  提示文档.md  服务端-客户端同步改造计划（Claude Code对齐版）.md  服务端上下文记忆与自动调用改造方案.md  服务端第二期改造计划.md  流式输出后端方案.md  联调日志与新版服务端预期对照表.md
agent/scripts/: check_local_model.ps1  start_local_model.ps1
agent/src/music_agent/: __init__.py  autonomous_planner.py  candidate_runtime.py  capability_catalog.py  capability_reasoner.py  chat_agent.py  cli.py  client_script_planner.py  command_templates.py  config.py  control_gateways.py  control_models.py  control_prompts.py  control_runtime.py  execution_router.py  github_review_relay.py  llm_client.py  music_runtime.py  observation_runtime.py  plan_models.py  plan_runtime.py  policy_hooks.py  prompts.py  response_style.py  runtime_actions.py  schemas.py  semantic_goal_router.py  semantic_models.py  semantic_object_resolver.py  semantic_parser.py  semantic_refiner.py  semantic_runtime.py  server.py  session_store.py  task_templates.py  tool_registry.py  workflow_memory.py  world_state.py
agent/tests/: test_autonomous_planner.py  test_cli.py  test_command_templates.py  test_execution_router.py  test_github_review_relay.py  test_llm_client.py  test_policy_hooks.py  test_prompts.py  test_response_style.py  test_schemas.py  test_semantic_parser.py  test_server.py  test_task_templates.py
archive/: httprequest.cpp  httprequest.h
cmake/: conditional_deploy.cmake  deploy_qt.cmake
flaskProject/: app.py  merge.py  search.py
network/: network_manager.cpp  network_service.cpp  network_service.h  network_types.h  response_cache.cpp
packaging/windows/: build_windows_setup.ps1  cloudmusic_installer.iss
plugin/: README.md
plugins/: PLUGIN_DEVELOPMENT.md
plugins/ai_assistant_plugin/: CMakeLists.txt  ai_assistant_plugin.cpp  ai_assistant_plugin.h  ai_assistant_plugin.json  ai_assistant_plugin.qrc  ai_assistant_plugin_page.cpp  ai_assistant_plugin_page.h
plugins/audio_converter_plugin/: AudioConverterView.qml  CMakeLists.txt  audio_converter_backend.cpp  audio_converter_backend.h  audio_converter_plugin.cpp  audio_converter_plugin.h  audio_converter_plugin.json  audio_converter_plugin.pro  cmake_install.cmake
plugins/whisper_translate_plugin/: CMakeLists.txt  README.md  WhisperTranslateView.qml  cmake_install.cmake  take_pcm.cpp  translate_widget.cpp  translate_widget.h  whisper_backend.cpp  whisper_backend.h  whisper_backend_old.cpp  whisper_translate_plugin.cpp  whisper_translate_plugin.h  whisper_translate_plugin.json
qml/: MainView.qml
qml/components/: ControlBar.qml  (+27 more)
rag/: README.md  pyproject.toml
rag/cases/: README.md  playtrack-empty-path.md  stop-playback-misrouted.md
rag/src/project_rag/: __init__.py  config.py
rag/src/project_rag/ingest/: chunkers.py  indexer.py  manifest.py  sources.py
rag/src/project_rag/retrieval/: embeddings.py  lexical.py  service.py  vector_store.py
rag/src/project_rag/schemas/: chunks.py  requests.py
rag/src/project_rag/server/: app.py
rag/tests/: test_api.py  test_chunkers.py  test_indexer.py
scripts/: cloudmusic_remote.py  git_commit_message_check.py  git_commit_review.py  git_push_review.py
styles/: netease.qss
tools/: agent_embedded_smoke.cpp
viewmodels/: BaseViewModel.cpp  BaseViewModel.h  PlayViewModel.cpp  PlaybackViewModel.cpp  PlaybackViewModel.h
说明文档/: AI理解软件运行逻辑说明.md  Agent典型任务链路示例.md  Agent工具清单与调用约定.md  Agent联调提示词（Qt客户端）.md  UI-MVVM架构与调用链路说明.md  UI视觉需求文档_网易云风格.md  Windows安装包上线计划与操作手册.md  客户端-服务端Agent能力对接清单（当前版）.md  客户端开放接口清单（当前版）.md  客户端模块目录索引（重构后）.md  客户端网络联调清单_私域部署.md  客户端能力全景说明（供Agent编排使用）.md  客户端能力模板映射（供Agent路由）.md  客户端脚本与能力入口边界说明.md  客户端脚本化改造-阶段1记录.md  客户端脚本化改造总方案（指导Agent端）.md  当前客户端功能与实现层级树.md  服务端远程开发发布工具说明.md  歌单接口文档.md  网络架构与数据同步（含关键代码说明）.md  视频架构与内部数据同步（含关键代码说明）.md  视频音画同步策略（含关键代码说明）.md  音频架构与内部数据同步（含关键代码说明）.md  项目级RAG落地说明.md
(+284 files in other folders)
