[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-agent"
version = "0.1.0"
description = "Minimal chat agent backend for FFmpeg Music Player"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "langgraph>=0.2.0,<1.0.0",
    "openai>=1.68.0,<2.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.scripts]
music-agent-chat = "music_agent.cli:main"
music-agent-server = "music_agent.server:main"

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0,<1.0.0",
    "pytest>=8.3.0,<9.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
